# tickdrift

./: .gitignore  AGENTS.md  Cargo.toml
.agents/skills/gpui/: rendering.md
.agents/skills/gpui-testing/: SKILL.md
.github/workflows/: ci.yml
.opencode/skill/gpui/: actions.md  components.md
src/: main.rs  task.rs  task_editor.rs  task_list.rs  task_list_view.rs  tickdrift.rs  todo.rs  todo_list_view.rs  todolist.rs  todoz.rs
src/models/: mod.rs
src/tests/: mod.rs
