[package]
name = "todoz"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed.git", package = "gpui", features = ["test-support"] }
gpui-platform = { git = "https://github.com/zed-industries/zed.git", package = "gpui_platform" }

[profile.release]
strip = true
lto = true
codegen-units = 1
