[package]
name = "todoz"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed.git", package = "gpui", features = ["test-support", "wayland"] }
gpui-platform = { git = "https://github.com/zed-industries/zed.git", package = "gpui_platform", features = ["wayland"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
